[workspace]
members = ["ca-rules2", "egui", "lib", "tui"]
resolver = "2"

[workspace.dependencies]
ca-rules2 = { path = "ca-rules2", version = "0.1.0" }
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6.2"
documented = "0.3.0"
factoriosrc-lib = { path = "lib", version = "0.1.0" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
