[workspace]
members = ["ca-rules2", "egui", "lib", "tui"]
resolver = "2"

[workspace.dependencies]
ca-rules2 = { path = "ca-rules2", version = "0.1.0" }
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
documented = "0.4.1"
eframe = { version = "0.27.2", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui = "0.27.2"
factoriosrc-lib = { path = "lib", version = "0.1.0" }
log = "0.4.21"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
