[package]
name = "factoriosrc-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
] }
egui = "0.26.2"
env_logger = "0.11.2"
factoriosrc-lib = { workspace = true, features = ["serde"] }
