[package]
name = "factoriosrc-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
documented = { workspace = true }
eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
] }
egui = "0.26.2"
env_logger = "0.11.3"
factoriosrc-lib = { workspace = true, features = ["documented", "serde"] }
log = "0.4.21"
rfd = "0.14.1"
serde = { workspace = true }
serde_json = { workspace = true }
