[package]
name = "factoriosrc-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ca-rules2 = { path = "../ca-rules2", version = "0.1.0" }
clap = { version = "4.4.18", features = ["derive"], optional = true }
enumflags2 = "0.7.8"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
serde = { version = "1.0.196", features = ["derive"], optional = true }
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "1.0.56"

[features]
serde = ["dep:serde", "rand_xoshiro/serde1"]
