[package]
name = "factoriosrc-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ca-rules2 = { workspace = true }
clap = { workspace = true, optional = true }
documented = { workspace = true, optional = true }
enumflags2 = "0.7.9"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
serde = { workspace = true, optional = true }
strum = { version = "0.26.1", features = ["derive"] }
thiserror = { workspace = true }

[features]
serde = ["dep:serde", "rand_xoshiro/serde1"]
