[package]
name = "factoriosrc-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
factoriosrc-lib = { path = "../lib/", version = "0.1.0", features = ["clap"] }
