[package]
name = "factoriosrc-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.27.0"
factoriosrc-lib = { path = "../lib/", version = "0.1.0", features = ["clap"] }
ratatui = "0.26.0"
