[package]
name = "factoriosrc-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
color-eyre = "0.6.2"
crossterm = "0.27.0"
factoriosrc-lib = { workspace = true, features = ["clap", "serde"] }
ratatui = "0.26.1"
serde = { workspace = true }
serde_json = "1.0.114"
